Make notebooks more generic

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -38,7 +38,7 @@
    "id": "experienced-yemen",
    "metadata": {},
    "source": [
-    "Platform domain..."
+    "Platform domain and default service names\n"
    ]
   },
   {
@@ -48,7 +48,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"develop.eoepca.org\""
+    "base_domain = \"develop.eoepca.org\"\n",
+    "#Default values for services names\n",
+    "keyclock_service_name=\"keycloak\"\n",
+    "zoo_service_name=\"zoo\"\n",
+    "workspace_api_service_name=\"workspace-api\"\n",
+    "workspace_dns_delimiter=\"-\"\n",
+    "resource_catalog_service_name=\"resource-catalogue\""
    ]
   },
   {
@@ -73,7 +79,7 @@
     "import requests\n",
     "\n",
     "realm = \"master\"\n",
-    "keycloak = f\"https://keycloak.{base_domain}\"\n",
+    "keycloak = f\"https://{keyclock_service_name}.{base_domain}\"\n",
     "token_endpoint = f\"{keycloak}/realms/{realm}/protocol/openid-connect/token\"\n",
     "client_id = \"admin-cli\"\n",
     "client_secret = \"changeme\"\n",
@@ -112,7 +118,11 @@
     "#-------------------------------------------------------------------------------\n",
     "USER_NAME=\"eric\"\n",
     "USER_PASSWORD=\"changeme\"\n",
-    "user_access_token = get_user_token(USER_NAME, USER_PASSWORD)"
+    "user_access_token = get_user_token(USER_NAME, USER_PASSWORD)\n",
+    "headers = {\n",
+    "    \"Accept\": \"application/json\",\n",
+    "    \"Authorization\": f\"Bearer {user_access_token}\"\n",
+    "}"
    ]
   },
   {
@@ -130,8 +140,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workspace_url = \"https://workspace-api.\" + base_domain\n",
-    "workspace_prefix = \"ws\""
+    "workspace_url = f\"https://{workspace_api_service_name}.{base_domain}\"\n",
+    "workspace_prefix = \"ws\"\n",
+    "workspace_name = f\"{workspace_prefix}-{USER_NAME.lower()}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa36fe62-aeba-45e2-98e0-15f48e5b4621",
+   "metadata": {},
+   "source": [
+    "### Workspace: Create"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c9d711a-c4a3-461d-9cca-4e6e6a778472",
+   "metadata": {},
+   "source": [
+    "For this demo application to work, you will need to create a workspace for the user so that the processing results of the user can be stored in this workspace, which can be done by the admin user. To do so"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41d42abb-2b5d-492f-a854-4dba6ed485cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Get Eric user UID, as we need it to create the workspace\n",
+    "jwt_header = jwt.get_unverified_header(user_access_token)\n",
+    "jwt_payload = jwt.decode(user_access_token, options={\"verify_signature\": False})\n",
+    "user_uid = jwt_payload[\"sub\"]\n",
+    "#Login as admin, as you need an admin user to create the workspace\n",
+    "USER_ADMIN=\"admin\"\n",
+    "USER_ADMIN_PASSWORD=\"changeme\"\n",
+    "admin_access_token = get_user_token(USER_ADMIN, USER_ADMIN_PASSWORD)\n",
+    "response = requests.post(\n",
+    "    workspace_url+\"/workspaces\",\n",
+    "    headers={\n",
+    "    'Authorization': 'Bearer ' + admin_access_token\n",
+    "    },\n",
+    "    json={\n",
+    "        \"preferred_name\": USER_NAME.lower(),\n",
+    "        \"default_owner\": user_uid,\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b8e37d0-5b46-4bbc-b115-f97245701de1",
+   "metadata": {},
+   "source": [
+    "NOTE: wait some time for the workspace to be created in the backgroud. It usually takes a minute"
    ]
   },
   {
@@ -153,12 +217,6 @@
    "outputs": [],
    "source": [
     "# Workspace - Get Details\n",
-    "workspace_name = f\"{workspace_prefix}-{USER_NAME.lower()}\"\n",
-    "\n",
-    "headers = {\n",
-    "    \"Accept\": \"application/json\",\n",
-    "    \"Authorization\": f\"Bearer {user_access_token}\"\n",
-    "}\n",
     "response = requests.get(f\"{workspace_url}/workspaces/{workspace_name}\", headers=headers)\n",
     "\n",
     "response.raise_for_status()\n",
@@ -278,7 +336,7 @@
    "outputs": [],
    "source": [
     "app_id= \"s-expression\"\n",
-    "workspace_endpoint = f'https://resource-catalogue.{workspace_name}.{base_domain}/csw'\n",
+    "workspace_endpoint = f'https://{resource_catalog_service_name}{workspace_dns_delimiter}{workspace_name}.{base_domain}/csw'\n",
     "print(f\"{USER_NAME}'s workspace (catalogue): {workspace_endpoint}\")\n",
     "\n",
     "csw = CatalogueServiceWeb(workspace_endpoint,timeout=30,headers=headers)\n",
@@ -352,7 +410,6 @@
     "# API Processes - List Processes\n",
     "response = requests.get(f\"{ades_proc_url}/processes\", headers=headers)\n",
     "response.raise_for_status()\n",
-    "\n",
     "process_list = response.json()\n",
     "print(\"Processes...\")\n",
     "app_is_already_deployed = False\n",
@@ -788,6 +845,45 @@
     "for obj in bucket.objects.filter(Prefix=result_folder_name):\n",
     "    print(' ->', obj.key)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da303785-f054-4198-a623-4ed670a345a9",
+   "metadata": {},
+   "source": [
+    "### Workspace: Delete Eric workspace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a0fbd24-4669-42be-8555-75cc85ea61a8",
+   "metadata": {},
+   "source": [
+    "Now you can delete the Eric workspace. To do so, you can run as admin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "260a7e2f-89f3-43c1-af74-40ce890694bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.delete(\n",
+    "    f\"{workspace_url}/workspaces/{workspace_name}\",\n",
+    "    headers=headers,\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "683eac65-c217-446f-b95b-871ab4d10457",
+   "metadata": {},
+   "source": [
+    "After this call, you will need to manually go into the Harbor (at harbor.<your-domain>) and into the Minio (minio-console.<your-domain>) to delete the user and the bucket, otherwise you will not be able to recreate the Eric user. Note that all user data will be then lost after this operation"
+   ]
   }
  ],
  "metadata": {
@@ -806,7 +902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
