--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86106da3-e651-4840-bfe4-3e58c462a8f5",
+   "metadata": {},
+   "source": [
+    "Before running this notebook, ensure you have a configured a platform catalogue with Sentinel-2 data. As example, to harvest data from CREODIAS, you can follow the guide [here](https://eoepca.readthedocs.io/projects/deploy/en/latest/quickstart/creodias-deployment/#harvest-creodias-data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8219b827-fe6d-4a8d-9af2-6f8719dd65ea",
    "metadata": {},
    "source": [
@@ -39,9 +47,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# base_domain = \"192-168-49-2.nip.io\"\n",
     "base_domain = \"develop.eoepca.org\"\n",
-    "workspaces_endpoint = f'https://workspace-api.{base_domain}/workspaces'\n",
+    "resource_catalog_service_name=\"resource-catalogue\"\n",
+    "workspace_api_service_name=\"workspace-api\"\n",
+    "workspace_dns_delimiter=\"-\"\n",
+    "workspaces_endpoint = f'https://{workspace_api_service_name}.{base_domain}/workspaces'\n",
     "workspace_prefix = \"ws\""
    ]
   },
@@ -107,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}/csw'"
+    "system_catalogue_endpoint = f'https://{resource_catalog_service_name}.{base_domain}/csw'"
    ]
   },
   {
@@ -2762,7 +2772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
