--- a/demoroot/notebooks/04 Data Access.ipynb
+++ b/demoroot/notebooks/04 Data Access.ipynb
@@ -10,6 +10,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "740f9c50-65f8-4d9c-b9dc-873c24618764",
+   "metadata": {},
+   "source": [
+    "Before running this notebook, ensure you have a configured a platform catalogue with Sentinel-2 data. As example, to harvest data from CREODIAS, you can follow the guide [here](https://eoepca.readthedocs.io/projects/deploy/en/latest/quickstart/creodias-deployment/#harvest-creodias-data).\n",
+    "Then you need to enter the system resource catalogue at `https://resource-catalogue.<your-domain>` and look for a Sentinel 2 MSIL2A product to visualize and update the `scene_id` below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "88d55bcb-6eba-4ac3-af24-67c5d286921f",
    "metadata": {},
    "source": [
@@ -57,7 +66,8 @@
    "source": [
     "base_domain = \"develop.eoepca.org\"\n",
     "workspace_prefix = \"ws\"\n",
-    "system_endpoint = f'https://resource-catalogue.{base_domain}/csw'"
+    "resource_catalog_service_name=\"resource-catalogue\"\n",
+    "system_endpoint = f'https://{resource_catalog_service_name}.{base_domain}/csw'"
    ]
   },
   {
@@ -77,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene_id=\"S2B_MSIL2A_20190910T095029_N0500_R079_T33TXN_20230430T083712.SAFE\""
+    "scene_id=\"S2B_MSIL2A_20190910T095029_N0213_R079_T33UXP_20190910T124513.SAFE\""
    ]
   },
   {
@@ -495,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
