--- a/demoroot/notebooks/05 Workspace Management.ipynb
+++ b/demoroot/notebooks/05 Workspace Management.ipynb
@@ -36,7 +36,12 @@
    "outputs": [],
    "source": [
     "base_domain = \"develop.eoepca.org\"\n",
-    "workspaces_endpoint = f'https://workspace-api.{base_domain}/workspaces'"
+    "#Default values for services names\n",
+    "keyclock_service_name=\"keycloak\"\n",
+    "workspace_api_service_name=\"workspace-api\"\n",
+    "workspace_dns_delimiter=\"-\"\n",
+    "resource_catalog_service_name=\"resource-catalogue\"\n",
+    "workspaces_endpoint = f'https://{workspace_api_service_name}.{base_domain}/workspaces'"
    ]
   },
   {
@@ -44,7 +49,7 @@
    "id": "73e7a1ed-09bb-40a4-8fae-d777d7f60c8b",
    "metadata": {},
    "source": [
-    "We want to associate the workspace with a user. Also, some operations on the workspace require a logged in user. So we are using the client and use Eric as an owner."
+    "Setup helper functions"
    ]
   },
   {
@@ -60,7 +65,7 @@
     "import requests\n",
     "\n",
     "realm = \"master\"\n",
-    "keycloak = f\"https://keycloak.{base_domain}\"\n",
+    "keycloak = f\"https://{keyclock_service_name}.{base_domain}\"\n",
     "token_endpoint = f\"{keycloak}/realms/{realm}/protocol/openid-connect/token\"\n",
     "client_id = \"admin-cli\"\n",
     "client_secret = \"changeme\"\n",
@@ -86,22 +91,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13d59c13-7b68-4d0f-a54a-59ac27be3956",
+   "cell_type": "markdown",
+   "id": "1cd696b5-c35c-4c16-85fb-625ea31a6cc6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "USER_ERIC=\"eric\"\n",
-    "USER_ERIC_PASSWORD=\"changeme\"\n",
-    "eric_access_token = get_user_token(USER_ERIC, USER_ERIC_PASSWORD)\n",
-    "headers = {\n",
-    "    'Authorization': 'Bearer ' + eric_access_token\n",
-    "}\n",
-    "\n",
-    "jwt_header = jwt.get_unverified_header(eric_access_token)\n",
-    "jwt_payload = jwt.decode(eric_access_token, options={\"verify_signature\": False})\n",
-    "eric_uid = jwt_payload[\"sub\"]"
+    "We need the admin user to create a workspace. We can also associate it workspace with a user, for which we will need its user ID, but for just testing we associate it also to the admin user."
    ]
   },
   {
@@ -274,7 +268,7 @@
    "outputs": [],
    "source": [
     "time.sleep(3)\n",
-    "response = requests.get(f\"https://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
+    "response = requests.get(f\"https://{resource_catalog_service_name}{workspace_dns_delimiter}{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
     "response.raise_for_status()\n",
     "response.json()"
    ]
@@ -322,7 +316,7 @@
    "outputs": [],
    "source": [
     "time.sleep(3)\n",
-    "response = requests.get(f\"https://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
+    "response = requests.get(f\"https://{resource_catalog_service_name}{workspace_dns_delimiter}{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
     "response.raise_for_status()\n",
     "response.json()"
    ]
@@ -372,7 +366,7 @@
    "outputs": [],
    "source": [
     "time.sleep(3)\n",
-    "response = requests.get(f\"https://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
+    "response = requests.get(f\"https://{resource_catalog_service_name}{workspace_dns_delimiter}{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
     "response.raise_for_status()\n",
     "response.json()"
    ]
@@ -422,7 +416,7 @@
    "outputs": [],
    "source": [
     "time.sleep(3)\n",
-    "response = requests.get(f\"https://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
+    "response = requests.get(f\"https://{resource_catalog_service_name}{workspace_dns_delimiter}{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
     "response.raise_for_status()\n",
     "response.json()"
    ]
@@ -469,7 +463,7 @@
    "outputs": [],
    "source": [
     "time.sleep(3)\n",
-    "response = requests.get(f\"http://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items/simple-collection\", headers=headers)\n",
+    "response = requests.get(f\"http://{resource_catalog_service_name}{workspace_dns_delimiter}{actual_workspace_name}.{base_domain}/collections/metadata:main/items/simple-collection\", headers=headers)\n",
     "response.raise_for_status()\n",
     "response.json()"
    ]
@@ -490,8 +484,7 @@
    "outputs": [],
    "source": [
     "import boto3\n",
-    "#S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
-    "S3_ENDPOINT = \"https://minio.develop.eoepca.org\"\n",
+    "S3_ENDPOINT = f\"https://minio.{base_domain}\"\n",
     "session = boto3.session.Session()\n",
     "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
     "object = s3resource.Object(bucket_name, 'application-package/s-expression/s-expression-0_0_2.cwl')\n",
@@ -547,7 +540,7 @@
    "outputs": [],
    "source": [
     "time.sleep(3)\n",
-    "response = requests.get(f\"https://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=application\", headers=dict(f=\"json\", **headers))\n",
+    "response = requests.get(f\"https://{resource_catalog_service_name}{workspace_dns_delimiter}{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=application\", headers=dict(f=\"json\", **headers))\n",
     "response.raise_for_status()\n",
     "response.json()"
    ]
@@ -600,6 +593,14 @@
     "response.raise_for_status()\n",
     "response"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "354a92c4-cb66-4a77-a8c9-2012cb5f2c6d",
+   "metadata": {},
+   "source": [
+    "After this call, you will need to manually go into the Harbor (at `harbor.<your-domain>`) and into the Minio (`minio-console.<your-domain>`) to delete the user and the bucket, otherwise you will not be able to recreate the user. Note that all user data will be then lost after this operation"
+   ]
   }
  ],
  "metadata": {
@@ -618,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   },
   "vscode": {
    "interpreter": {
