Update keycloak url to v1x

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -58,7 +58,7 @@
     "import requests\n",
     "\n",
     "realm = \"master\"\n",
-    "keycloak = f\"https://keycloak.{base_domain}\"\n",
+    "keycloak = f\"https://keycloak-v1x.{base_domain}\"\n",
     "token_endpoint = f\"{keycloak}/realms/{realm}/protocol/openid-connect/token\"\n",
     "client_id = \"admin-cli\"\n",
     "client_secret = \"changeme\"\n",
@@ -2762,7 +2762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
