Adding Registration API v2 demo

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -1740,7 +1740,7 @@
    "outputs": [],
    "source": [
     "base_domain = \"develop.eoepca.org\"\n",
-    "registration_endpoint = f'https://registration-api.{base_domain}'"
+    "registration_endpoint = f'https://registration-api-v1x.{base_domain}'"
    ]
   },
   {
@@ -1842,6 +1842,136 @@
    "source": [
     "time.sleep(3)\n",
     "response = requests.get(f\"https://resource-catalogue.{base_domain}/collections/metadata:main/items/20201211_223832_CS2\", headers=dict(f=\"json\", **headers))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a45cbf68-b327-4895-b208-04acf893ca9c",
+   "metadata": {},
+   "source": [
+    "### Registration API v2 demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fc14c78-f32a-4bab-8bc6-ecfd476c088c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import time\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "289330b7-5b20-4df2-adfc-8497036fc8a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_domain = \"develop.eoepca.org\"\n",
+    "registration_endpoint = f'https://registration-api.{base_domain}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "561dfecc-2e40-41e0-b02d-1eb17abf44af",
+   "metadata": {},
+   "source": [
+    "We will now register a STAC Item in the Registration API using OGC API - Processes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e103cc3-7b2f-4bfe-9d51-68ca24f539ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/processes/register/execution\",\n",
+    "    json={\n",
+    "        \"inputs\": {\n",
+    "            \"type\": \"item\",\n",
+    "            \"source\": \"https://raw.githubusercontent.com/stac-utils/stac-examples/refs/heads/main/sentinel2/sentinel2-sample.json\",\n",
+    "            \"target\": \"https://resource-catalogue.develop.eoepca.org\"\n",
+    "        }\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99dbcdbf-7881-41cd-9134-b579978f7f35",
+   "metadata": {},
+   "source": [
+    "Check if the STAC Item is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db1163c6-3aa0-43ab-a756-26456024e2a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/metadata:main/items/S2A_OPER_MSI_L2A_TL_SGS__20180524T190423_A015250_T26SKD_N02.08\", headers=dict(f=\"json\"))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43cf182b-7191-4e64-985e-4a6707c327fa",
+   "metadata": {},
+   "source": [
+    "We will now unregister the STAC Item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab5eebf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/processes/deregister/execution\",\n",
+    "    json={\n",
+    "        \"inputs\": {\n",
+    "            \"id\": \"S2A_OPER_MSI_L2A_TL_SGS__20180524T190423_A015250_T26SKD_N02.08\",\n",
+    "            \"target\": \"https://resource-catalogue.develop.eoepca.org\"\n",
+    "        }\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1353c71-13dd-4b18-904c-eeac3740e109",
+   "metadata": {},
+   "source": [
+    "Check if the STAC Item is actually unregistered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b24ee59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/metadata:main/items/S2A_OPER_MSI_L2A_TL_SGS__20180524T190423_A015250_T26SKD_N02.08\", headers=dict(f=\"json\"))\n",
     "response.raise_for_status()\n",
     "response.json()"
    ]
