Add skeleton for v2 demo

--- a/demoroot/notebooks/04 Data Access.ipynb
+++ b/demoroot/notebooks/04 Data Access.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aec1b1dc-caad-4fde-862b-4fd0f4136a30",
+   "metadata": {},
+   "source": [
+    "## Data Access v1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "88d55bcb-6eba-4ac3-af24-67c5d286921f",
    "metadata": {},
    "source": [
@@ -477,6 +485,70 @@
     "img1 = plt.imshow(imread(BytesIO(content)),extent=[23.4,24.5,37.8,38.8],aspect='auto')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4708f193-9bf9-4287-a78d-64e5ca7b18bb",
+   "metadata": {},
+   "source": [
+    "## Data Access v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "022ead04-2b53-41a5-9ee2-a32ea5d75e35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "213343e6-9525-48fb-b703-6532ca9a9466",
+   "metadata": {},
+   "source": [
+    "## Data Discovery (STAC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39d2ba4c-5faa-4bcc-8f73-6e5eef70e257",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "693093df-c894-41af-9c0e-08b0f333f362",
+   "metadata": {},
+   "source": [
+    "## Data Visualization with Dynamic Tiles (OGC WMTS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af9218a5-7f13-4b32-bc68-56297217ac6f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d1fa38d-6d15-4c73-81b7-041efd7bb355",
+   "metadata": {},
+   "source": [
+    "## Data Analysis with Coverages (OGC API Coverages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd109d9c-1515-43ee-a97d-e215a6b8e1df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -495,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
