Add skeleton for v2 demo

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -2560,6 +2560,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "01bc5fc7-579a-4fc8-a525-287a9c3b55ae",
+   "metadata": {},
+   "source": [
+    "### STAC Transaction Extension demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a65dfb5-a33c-4cc4-b472-bd50005483d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e678e6a8-0e6e-4067-b21f-b15fa9d32163",
    "metadata": {},
    "source": [
@@ -2893,7 +2911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
