--- a/demoroot/notebooks/04 Data Access.ipynb
+++ b/demoroot/notebooks/04 Data Access.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bfc4d810-e4c0-42a4-9af7-d1290e510671",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e72dcf8a-7ed9-44d6-9cc4-00244058e653",
    "metadata": {},
    "outputs": [],
@@ -1036,16 +1036,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fd109d9c-1515-43ee-a97d-e215a6b8e1df",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "COV_API_URL = f\"https://stacture.{base_domain}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "982b993d",
+   "metadata": {},
+   "source": [
+    "### Listing collections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fe14d5cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "####\n",
+      "Sentinel-2 Level-2A\n",
+      "sentinel-2-l2a\n"
+     ]
+    }
+   ],
+   "source": [
+    "COV_COLLECTIONS = f\"{COV_API_URL}/collections\"\n",
+    "resp = requests.get(COV_COLLECTIONS).json()\n",
+    "for collection in resp['collections']:\n",
+    "    print(\"####\")\n",
+    "    print(collection['title'])\n",
+    "    print(collection['id'])\n",
+    "\n",
+    "collection_id = collection['id']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89f15f8c",
+   "metadata": {},
+   "source": [
+    "### Get collection metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6c822dc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Sentinel-2 Level-2A Collection 1 product provides orthorectified Surface Reflectance (Bottom-Of-Atmosphere: BOA), with sub-pixel multispectral and multitemporal registration accuracy. Scene Classification (including Clouds and Cloud Shadows), AOT (Aerosol Optical Thickness) and WV (Water Vapour) maps are included in the product.\n",
+      "{'spatial': {'bboxes': [[-180, -90, 180, 90]], 'extra_fields': {}}, 'temporal': {'intervals': [['2015-06-27T10:25:31+00:00', None]], 'extra_fields': {}}, 'extra_fields': {}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "COLLECTION_URL = f\"{COV_API_URL}/collections/{collection_id}\"\n",
+    "resp = requests.get(COLLECTION_URL).json()\n",
+    "print(resp[\"description\"])\n",
+    "print(resp['extent'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9a4d2bd",
+   "metadata": {},
+   "source": [
+    "### Get collection Coverage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "74b9bbb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "COVERAGE_URL = f\"{COLLECTION_URL}/coverage\"\n",
+    "params = {\n",
+    "    \"bbox\": \"18.5,52.4,18.7,52.7\",\n",
+    "    \"datetime\": \"2023-12-31T10:00:00Z/2023-12-31T10:05:00Z\",\n",
+    "    \"bbox-crs\": \"EPSG:4326\",\n",
+    "    \"width\": 512,\n",
+    "    \"height\": 512,\n",
+    "    \"f\": \"image/tiff\",\n",
+    "}\n",
+    "resp = requests.get(COVERAGE_URL, params=params)\n",
+    "resp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8b3b5d18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BBOX: BoundingBox(left=18.5, bottom=52.4, right=18.7, top=52.7)\n",
+      "CRS: EPSG:4326\n",
+      "SHAPE: (1, 512, 512)\n",
+      "MIN: -0.036218856\n",
+      "MAX: 0.48306534\n",
+      "MEAN: 0.14067203\n",
+      "STDEV: 0.06256915\n"
+     ]
+    }
+   ],
+   "source": [
+    "from rasterio.io import MemoryFile\n",
+    "with MemoryFile(resp.content) as memfile:\n",
+    "    with memfile.open() as dataset:\n",
+    "        print(\"BBOX:\", dataset.bounds)\n",
+    "        print(\"CRS:\", dataset.crs)\n",
+    "        data_array = dataset.read()\n",
+    "\n",
+    "print(\"SHAPE:\", data_array.shape)\n",
+    "print(\"MIN:\", data_array.min())\n",
+    "print(\"MAX:\", data_array.max())\n",
+    "print(\"MEAN:\", data_array.mean())\n",
+    "print(\"STDEV:\", data_array.std())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86057ea2",
+   "metadata": {},
+   "source": [
+    "### Listing scenes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "530e20b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 'S2B_MSIL2A_20231231T100329_N0510_R122_T34UDF_20231231T110801', 'links': [{'href': 'http://stacture.develop.eoepca.org/collections/sentinel-2-l2a/scenes/S2B_MSIL2A_20231231T100329_N0510_R122_T34UDF_20231231T110801', 'rel': 'self', 'type': None, 'hreflang': None, 'title': None, 'length': None}]}\n",
+      "{'id': 'S2B_MSIL2A_20231231T100329_N0510_R122_T34UDE_20231231T110801', 'links': [{'href': 'http://stacture.develop.eoepca.org/collections/sentinel-2-l2a/scenes/S2B_MSIL2A_20231231T100329_N0510_R122_T34UDE_20231231T110801', 'rel': 'self', 'type': None, 'hreflang': None, 'title': None, 'length': None}]}\n",
+      "{'id': 'S2B_MSIL2A_20231231T100329_N0510_R122_T34UDD_20231231T110801', 'links': [{'href': 'http://stacture.develop.eoepca.org/collections/sentinel-2-l2a/scenes/S2B_MSIL2A_20231231T100329_N0510_R122_T34UDD_20231231T110801', 'rel': 'self', 'type': None, 'hreflang': None, 'title': None, 'length': None}]}\n",
+      "{'id': 'S2B_MSIL2A_20231231T100329_N0510_R122_T34UCG_20231231T110801', 'links': [{'href': 'http://stacture.develop.eoepca.org/collections/sentinel-2-l2a/scenes/S2B_MSIL2A_20231231T100329_N0510_R122_T34UCG_20231231T110801', 'rel': 'self', 'type': None, 'hreflang': None, 'title': None, 'length': None}]}\n",
+      "{'id': 'S2B_MSIL2A_20231231T100329_N0510_R122_T34UCF_20231231T110801', 'links': [{'href': 'http://stacture.develop.eoepca.org/collections/sentinel-2-l2a/scenes/S2B_MSIL2A_20231231T100329_N0510_R122_T34UCF_20231231T110801', 'rel': 'self', 'type': None, 'hreflang': None, 'title': None, 'length': None}]}\n",
+      "{'id': 'S2B_MSIL2A_20231231T100329_N0510_R122_T34UCE_20231231T110801', 'links': [{'href': 'http://stacture.develop.eoepca.org/collections/sentinel-2-l2a/scenes/S2B_MSIL2A_20231231T100329_N0510_R122_T34UCE_20231231T110801', 'rel': 'self', 'type': None, 'hreflang': None, 'title': None, 'length': None}]}\n",
+      "{'id': 'S2B_MSIL2A_20231231T100329_N0510_R122_T34UCD_20231231T110801', 'links': [{'href': 'http://stacture.develop.eoepca.org/collections/sentinel-2-l2a/scenes/S2B_MSIL2A_20231231T100329_N0510_R122_T34UCD_20231231T110801', 'rel': 'self', 'type': None, 'hreflang': None, 'title': None, 'length': None}]}\n",
+      "{'id': 'S2B_MSIL2A_20231231T100329_N0510_R122_T34UCC_20231231T110801', 'links': [{'href': 'http://stacture.develop.eoepca.org/collections/sentinel-2-l2a/scenes/S2B_MSIL2A_20231231T100329_N0510_R122_T34UCC_20231231T110801', 'rel': 'self', 'type': None, 'hreflang': None, 'title': None, 'length': None}]}\n",
+      "{'id': 'S2B_MSIL2A_20231231T100329_N0510_R122_T34UCB_20231231T110801', 'links': [{'href': 'http://stacture.develop.eoepca.org/collections/sentinel-2-l2a/scenes/S2B_MSIL2A_20231231T100329_N0510_R122_T34UCB_20231231T110801', 'rel': 'self', 'type': None, 'hreflang': None, 'title': None, 'length': None}]}\n",
+      "{'id': 'S2B_MSIL2A_20231231T100329_N0510_R122_T34UCA_20231231T110801', 'links': [{'href': 'http://stacture.develop.eoepca.org/collections/sentinel-2-l2a/scenes/S2B_MSIL2A_20231231T100329_N0510_R122_T34UCA_20231231T110801', 'rel': 'self', 'type': None, 'hreflang': None, 'title': None, 'length': None}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "SCENES = f\"{COV_API_URL}/collections/{collection_id}/scenes\"\n",
+    "resp = requests.get(SCENES).json()\n",
+    "for scene in resp['scenes']:\n",
+    "    print(scene)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa9833bc",
+   "metadata": {},
+   "source": [
+    "### TODO: Get Scene Metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c374f1fc",
+   "metadata": {},
+   "source": [
+    "### TODO: Get Scene Coverage"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "eoepca-demo",
    "language": "python",
    "name": "python3"
   },
@@ -1059,7 +1254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
