Add stub for transactions api demo

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -2560,20 +2560,218 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01bc5fc7-579a-4fc8-a525-287a9c3b55ae",
+   "id": "10bf1d4d-c52e-466e-832d-451cf3aac01d",
    "metadata": {},
    "source": [
-    "### STAC Transaction Extension demo"
+    "### STAC API demo (eoAPI)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a65dfb5-a33c-4cc4-b472-bd50005483d4",
+   "id": "094175dd-0447-4eb4-ab57-71a918165688",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pass"
+    "from pystac_client import Client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce8958e5-ba8a-491b-ae95-b32854185312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_domain = \"develop.eoepca.org\"\n",
+    "stac_api_url = f'https://eoapi.{base_domain}/stac'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd7a4f2b-aded-44e9-be6c-128fc9ac7be3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Search against the STAC API\n",
+    "catalog = Client.open(stac_api_url)\n",
+    "catalog.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c38143f-e42a-4aca-834d-f04bfce756de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select a collection\n",
+    "collections_filter = {\n",
+    "    \"op\": \"=\",\n",
+    "    \"args\": [{\"property\": \"collection\"}, \"sentinel-2-l2a\"],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddea4499-c3a3-4043-9931-060d6d38d022",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define your area of interest\n",
+    "AOI = {\n",
+    "  \"type\": \"Polygon\",\n",
+    "  \"coordinates\": [\n",
+    "    [\n",
+    "      [18.414015459767, 54.232763555655595],\n",
+    "      [20.04561585636452, 54.232763555655595],\n",
+    "      [20.04561585636452, 54.92536348887734],\n",
+    "      [18.414015459767, 54.92536348887734],\n",
+    "      [18.414015459767, 54.232763555655595]\n",
+    "    ]\n",
+    "  ]\n",
+    "}\n",
+    "spatial_filter = {\"op\": \"s_intersects\", \"args\": [{\"property\": \"geometry\"}, AOI]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "389c771c-3d4d-4770-a343-72c9a70ee3ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define your time interval of interest\n",
+    "TIME_INTERVAL = [\"2023-09-01T00:00:00Z\", \"2023-09-30T23:59:59Z\"]\n",
+    "temporal_filter = {\n",
+    "    \"op\": \"t_intersects\",\n",
+    "    \"args\": [{\"property\": \"datetime\"}, {\"interval\": TIME_INTERVAL}],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "469bd653-c459-4264-8110-19bb75c2ea8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Additional filters can be applied for other search criteria like <= maximum eo:cloud_cover in item properties\n",
+    "cloud_filter = {\"op\": \"<=\", \"args\": [{\"property\": \"eo:cloud_cover\"}, 10]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60dbfd96-6d0e-4cdc-ac0b-78f7af1d0b1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define your search with CQL2 syntax\n",
+    "search = catalog.search(\n",
+    "    filter_lang=\"cql2-json\",\n",
+    "    sortby=[{\"direction\": \"asc\", \"field\": \"properties.datetime\"}],\n",
+    "    filter={\n",
+    "      \"op\": \"and\",\n",
+    "      \"args\": [collections_filter, spatial_filter, temporal_filter, cloud_filter]\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5339aa0-e84d-4fc0-8c97-a7946b090889",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grab the first item from the search results and sign the assets\n",
+    "first_item = next(search.get_items())\n",
+    "first_item"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01bc5fc7-579a-4fc8-a525-287a9c3b55ae",
+   "metadata": {},
+   "source": [
+    "### STAC Transaction Extension demo (eoAPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41e0fd36-2c88-47fc-8bfc-7d41d16b1136",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_domain = \"develop.eoepca.org\"\n",
+    "stac_api_url = f'https://eoapi.{base_domain}/stac'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10922f8e-2d6b-447b-9e1d-6e604f7ca7da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Search against the STAC API\n",
+    "catalog = Client.open(stac_api_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08888be3-9a89-4a51-8ccb-f57fa0aeb212",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create collection\n",
+    "response = requests.post(\n",
+    "    f\"{stac_api_url}/processes/register/execution\",\n",
+    "    json={\n",
+    "        \"inputs\": {\n",
+    "            \"type\": \"item\",\n",
+    "            \"source\": \"https://raw.githubusercontent.com/stac-utils/stac-examples/refs/heads/main/sentinel2/sentinel2-sample.json\",\n",
+    "            \"target\": stac_api_url\n",
+    "        }\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83527eb3-7930-4893-ac70-c1533bab9e8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62632249-1f76-4a42-a4b6-e5baf05f8cac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53d7d386-23df-4758-9561-9a3ee5ca7d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete collection"
    ]
   },
   {
