Updates to Resource Catalogue demo

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -332,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection_query = PropertyIsEqualTo('apiso:ParentIdentifier', 'S2MSI1C')"
+    "collection_query = PropertyIsEqualTo('apiso:ParentIdentifier', 'S2MSI2A')"
    ]
   },
   {
@@ -366,6 +366,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d42e1df6-5291-42de-bfb5-9069b44e2789",
+   "metadata": {},
+   "source": [
+    "Combine collection with bbox filters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43f33dc6-05b0-4bce-b101-86db3f77eb45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_list = [\n",
+    "    And(\n",
+    "        [\n",
+    "            bbox_query,  # bounding box\n",
+    "            collection_query  # collection\n",
+    "        ]\n",
+    "    )\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0be97f4a-d691-4ae3-8023-43e9a45bf277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw.getrecords2(constraints=filter_list, outputschema='http://www.isotc211.org/2005/gmd')\n",
+    "csw.results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ed6f2986-46b4-46f2-ae86-55b8aa407298",
@@ -382,7 +418,7 @@
    "id": "45f979dd-55ac-4e3d-b38f-998ca1c1dab8",
    "metadata": {},
    "source": [
-    "Or we can perform a full text search (here the keyword Orthoimagery is used)"
+    "Or we can perform a full text search (here the keyword MSI is used)"
    ]
   },
   {
@@ -1605,8 +1641,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#my_catalogue_query2 = w.collection_items('metadata:main', q='Orthoimagery')\n",
-    "my_catalogue_query2 = w.collection_items('metadata:main', bbox=['13.9','37','15.1','37.9'])"
+    "#my_catalogue_query2 = w.collection_items('metadata:main', q='MSI')\n",
+    "my_catalogue_query2 = w.collection_items('metadata:main', bbox=[14.9,47.7,16.4,48.7])\n",
+    "# my_catalogue_query2 = w.collection_items('S2MSI2A', bbox=[14.9,47.7,16.4,48.7])"
    ]
   },
   {
@@ -1630,11 +1667,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d5384be-3bfb-43da-a88e-f13f5ddeb264",
+   "id": "c33644c4-5b3b-4850-b70d-5f56fc789c54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_catalogue_query2"
+    "[f['id'] for f in my_catalogue_query2['features']]"
    ]
   },
   {
@@ -2495,7 +2532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mysearch = catalog.search(collections=['metadata:main'], max_items=10)\n",
+    "mysearch = catalog.search(collections=['S2MSI2A'], max_items=10)\n",
     "print(f\"{mysearch.matched()} items found\")"
    ]
   },
@@ -2514,8 +2551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mysearch = catalog.search(collections=['metadata:main'], bbox=[14.9,47.7,16.4,48.7], max_items=10)\n",
-    "#mysearch = catalog.search(collections=['metadata:main'], bbox=[-72.5,40.5,-72,41], max_items=10)\n",
+    "mysearch = catalog.search(collections=['S2MSI2A'], bbox=[14.9,47.7,16.4,48.7], max_items=10)\n",
     "print(f\"{mysearch.matched()} items found\")"
    ]
   },
@@ -3027,7 +3063,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
