Update to latest pystac_client version

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -2504,7 +2504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalog._stac_io.assert_conforms_to(ConformanceClasses.ITEM_SEARCH)"
+    "catalog.conforms_to(ConformanceClasses.ITEM_SEARCH)"
    ]
   },
   {
@@ -2514,7 +2514,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalog._stac_io.assert_conforms_to(ConformanceClasses.CORE)"
+    "catalog.conforms_to(ConformanceClasses.CORE)"
    ]
   },
   {
@@ -2570,7 +2570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "items = mysearch.get_items()\n",
+    "items = mysearch.items()\n",
     "for item in items:\n",
     "    print(item.id)"
    ]
@@ -2590,8 +2590,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(json.dumps(item.to_dict(), indent=2))\n",
+    "# print(json.dumps(item.to_dict(), indent=2))\n",
     "#print(item.to_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cada058-6b37-4789-95c2-bf1ef3b75539",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_item = next(mysearch.items())\n",
+    "first_item"
    ]
   },
   {
@@ -2724,7 +2735,7 @@
    "outputs": [],
    "source": [
     "# Grab the first item from the search results and sign the assets\n",
-    "first_item = next(search.get_items())\n",
+    "first_item = next(search.items())\n",
     "first_item"
    ]
   },
